# deep-agent

./: .gitignore  agent-output.txt  agent.py  dev_thoughts.txt  main.py  prompt.md  pyproject.toml  tools.py
src/deep_agent/: agent.py  deepseek_agent.py  deepseek_reasoner_agent.py  main.py  test.py  tg_funcs.py  tools.py
src/deep_agent/MASTERMIND/: agent_constitution.txt  core_system_prompt.md  extended_system_prompt.md  extended_tool_guidelines.md  extended_tools.py  extended_tools_guidelines.md  extended_tools_sample.py  post_counter.txt  rest_api_tools.py  tavily_tools.py  tg_tools.py  topic_data.json  update_post_status.py
src/deep_agent/MASTERMIND/crafted_skills/: README.md  file_reader.py  rest_api_client.py  rest_api_module.py  search_in_file.py  topic_manager.py
src/deep_agent/MASTERMIND/scripts/: action_roulette.py  check_schedule.py  heartbeat_actions.txt  post_manager.py  post_notifier.py
