[project]
name = "deep-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "PyDevill",email = "delphadyth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=2.29.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "markdown-analysis (>=0.1.5,<0.2.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "pandas (>=3.0.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "deep_agent", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
